# CreatorBox

./: .gitattributes  .gitignore  .gitmodules  README.md  README_EN.md  README_ZH.md  cli.py  pyproject.toml  requirements.txt  run.bat  run.py  setup.py  start.bat  start_dev.bat  update.bat
.github/: funding.yml
.github/workflows/: static.yml
creator-cli/: .gitignore  requirements.txt  setup.py
creator-cli/script/: _cli.py  cbaudio.py  cbdraft.py  cbsrt.py  cbtrans.py  cbtts.py  cbvideo.py
creator-server/: main.py  requirements.txt
creator-server/src/: cbaudio.py  cbvideo.py  main.py
creator-server/static/: logs.html  player.html
docs/: 404.html  apex.m4a  capcut.html  deploy-colab.html  deploy-local.html  empty.html  example1.html  example2.html  example3.html  extensions.html  feature-backup.html  feature-base.html  feature-draft.html  feature-dubbing.html  feature-scene.html  feature-speaker.html  feature-transcribe.html  feature-translation.html  feature-tts.html  gradio.html  hashmap.json  help-faq.html  help-glossary.html  help-model.html  help-output.html  help.html  index.html  justmysocks.html  maskpainter.html  music.m4a  nav.html  plugin.html  preparation.html  robots.txt  sitemap.txt  sitemap.xml  sitemap2.xml  socketio.html  style.Avo_XaLv.css  team.html  (+6 more)
docs/assets/: app.DgYGbqy5.js  app.tmOiVVrd.js  en_example1.md.BnbAAqML.js  en_example1.md.BnbAAqML.lean.js  en_example1.md.Bzo7GRkZ.js  en_example1.md.Bzo7GRkZ.lean.js  en_example2.md.CTNYovvx.js  en_example2.md.CTNYovvx.lean.js  en_example2.md.DuRbIiZW.js  en_example2.md.DuRbIiZW.lean.js  en_example3.md.BPSMULK9.js  en_example3.md.BPSMULK9.lean.js  en_example3.md.C5LkRpUM.js  en_example3.md.C5LkRpUM.lean.js  en_index.md.CqTy8G-H.js  en_index.md.DjiQjch7.lean.js  example1.md.BHWt36Sv.js  example1.md.BHWt36Sv.lean.js  example1.md.DgFGKdQS.js  example1.md.DgFGKdQS.lean.js  example2.md.CoR9RpWX.js  example2.md.CoR9RpWX.lean.js  example2.md.bYVo5Eqj.js  example2.md.bYVo5Eqj.lean.js  example3.md.BQPnG6ky.js  example3.md.BQPnG6ky.lean.js  example3.md.C4fHX6do.js  example3.md.C4fHX6do.lean.js  index.md.B9bGpXTW.js  index.md.CWS69Rsb.lean.js  style.BolkAsiQ.css  style.Ckm4ZI7w.css
docs/common/: empty.html  force.html  startup.html  uv.html
docs/component/: dh.html  dubbing.html  gmt.html  index.html  vmi.html
docs/en/: example1.html  example2.html  example3.html  index.html
docs/experimental/: capcut.html  training.html
docs/extension/: cosyvoice.html  gptsovits.html  index.html  indextts.html  iopaint.html  sd.html  voxcpm.html
docs/guide/: deploy-colab.html  deploy-local.html  empty.html  gradio.html  help.html  preparation.html  what-is-creatorbox.html
docs/help/: capcut.html  env.html  faq.html  justmysocks.html  output.html  terminal.html
docs/plugin/: training.html
docs/snippet/: empty.html  force.html  mirror.html  startup.html  version.html
docs/static/: app.-66r9tzE.js  app.0zWibEz2.js  app.1mdHkI9z.js  app.1rnZAe9t.js  app.2H6YwHOR.js  app.2MmuCWL7.js  app.3d-uzMde.js  app.579jdR6J.js  app.6Z-gUGnG.js  app.8LMfbOgq.js  app.8_jESZ_G.js  app.9cmBwAzF.js  app.ANm3VN58.js  app.B-uf7mv3.js  app.B0Xo-6A9.js  app.B14hw3Gq.js  app.B2UWhRya.js  app.B3MDi850.js  app.B4HJ-5w0.js  app.B4qGFnKv.js  app.B6mE0Axk.js  app.B6n9SmRh.js  app.B7VtV2KS.js  app.B7teYY-j.js  app.B8GyvZD6.js  app.B9iuC4mM.js  app.B9kFpWFt.js  app.BC3Ko3-t.js  app.BEsOT8XN.js  app.BGRDpaVh.js  app.BGW6kyMe.js  app.BIJsA8i7.js  app.BJYAfJ_B.js  app.BLAudNS-.js  app.BM0f6CdA.js  app.BMGHA0dK.js  app.BONlr02b.js  app.BPHrrdip.js  app.BQkCAiD4.js  app.BQxQmjm1.js  (+6602 more)
docs/zh/: capcut.html  deploy-colab.html  deploy-local.html  empty.html  extensions.html  feature-backup.html  feature-base.html  feature-draft.html  feature-dubbing.html  feature-scene.html  feature-speaker.html  feature-transcribe.html  feature-translation.html  feature-tts.html  gradio.html  help-faq.html  help-glossary.html  help-model.html  help-output.html  help.html  index.html  justmysocks.html  maskpainter.html  nav.html  plugin.html  preparation.html  team.html  terminal.html  tools.html  training.html  vitepress.html  what-is-creatorbox.html
license/: license.lic  public.store
script/: .env  _translate.py  cbaudio.py  cbdraft.py  cbmovie.py  cbsrt.py  cbtrans.py  cbtts.py  requirements.txt
script/support/: keras_.py  remover_.py  whisper_.py
script/utils/: cbdownload.py  cbenv.py  cbfeature.py  cbutils.py
src/: __init__.py  cbaudio.py  cbvideo.py  dubb.py  dubbing.py  main.py  pipeline.py
src/app/: __init__.py  annotation.py  api.py  base.py  cache.py  config.py  const.py  constant.py  device.py  enums.py  executor.py  factory.py  gradio.py  grafana.py  i18n.py  launcher.py  llm.py  loader.py  locale.py  logger.py  mounts.py  network.py  plugin.py  prefs.py  prompt.py  proxy.py  repo.py  scheduler.py  settings.py  socket.py  task.py  tlog.py  types.py  webio.py  webui.py
src/component/: _settings.py  _theme.py  imr_.py  jae.py  jme.py  jme_.py  settings.py  uvr_.py  vmr_.py  vns_.py  vsd_.py  vse_.py
src/db/: __init__.py  exception.py  middleware.py  repo.py  sqlmodel_plus.py  sqlmodel_repo.py
src/gradio/: __init__.py  dashboard.py  helper.py  login.py  plugin.py  plugins.py  prefs.py  script.py  settings.py  style.css  style.py  theme.py  toast.py  utils.py
src/pyarmor_runtime_000000/: __init__.py
src/repository/: entity.py  metric.py  repo.py
src/router/: __init__.py  api.py  creatorapi.py  exception.py  file.py  gradio.py  i18n.py  iopaint.py  loader.py  masker.py  maskpainter.py  middleware.py  openapi.py  plugins.py  request.py  response.py  scheduler.py  settings.py  socket.py  sockets.py  user.py  webui.py
src/support/: __init__.py  asr_.py  draft_.py  gender_.py  llm_.py  rubber_.py  sd_.py  speaker_.py  spk_.py  spleeter_.py  trans_.py  tts_.py  vmr_.py  vns_.py  vse_.py  whisper_.py
src/utils/: __init__.py  cbalign.py  cbaudio.py  cbcolor.py  cbdeepl.py  cbdiarize.py  cbdraft.py  cbfile.py  cbimage.py  cbinstaller.py  cbkv.py  cblauncher.py  cblogger.py  cbmap.py  cbobs.py  (+13 more)
trans/: test.json  test.srt  test5_trans.srt
(+2560 files in other folders)
