[project]
name = "creatorbox"
version="1.0.26"
description="🚀🎬 Flexible, efficient, and scalable toolbox for editing and dubbing, unleashing creative potential"
readme = "README.md"
requires-python = ">3.11,<3.14"
dependencies = [
     "asyncio==4.0.0",
     "azure-cognitiveservices-speech==1.46.0",
     "babel==2.17.0",
     "click==8.3.0",
     "dashscope==1.25.0",
     "edge-tts==7.2.1",
     "elevenlabs==2.22.1",
     "fast-langdetect==1.0.0",
     "fastapi==0.121.1",
     "fastapi-profiler-lite==0.3.2",
     "faster-whisper==1.2.1",
     "ffmpeg-python==0.2.0",
     "firebase-admin==7.1.0",
     "funasr==1.2.7",
     "func-timeout==4.3.5",
     "gputil==1.4.0",
     "gradio-bottombar==0.0.2",
     "gradio-image-annotation==0.4.1",
     "gradio-rangeslider==0.0.8",
     "gradio-videoslider==0.0.2",
     "gradio[mcp]==5.49.1",
     "langchain==0.3.27",
     "langchain-community==0.3.21",
     "langchain-google-genai==2.1.9",
     "langchain-openai==0.3.31",
     "language-tags==1.2.0",
     "librosa==0.11.0",
     "loguru==0.7.3",
     "moviepy==1.0.3",
     "numpy==1.26.4",
     "opencv-python==4.11.0.86",
     "psutil==7.1.3",
     "pyannote-audio==3.3.2",
     "pyarmor==9.1.2",
     "pydub==0.25.1",
     "pyjianyingdraft==0.2.5",
     "pyngrok==7.5.0",
     "pytorchcv==0.0.73",
     "python-engineio==4.12.3",
     "python-multipart==0.0.20",
     "python-socketio==5.14.3",
     "requests-cache==1.2.1",
     "sqlmodel==0.0.27",
     "sqlmodel-repo>=0.0.4",
     "srt==3.5.3",
     "sseclient==0.0.27",
     "tenacity==9.1.2",
     "torch==2.6.0",
     "torchaudio==2.6.0",
     "torchvision==0.21.0",
     "transformers==4.57.1",
     "uvicorn==0.38.0",
     "yt-dlp==2025.10.22",
     "rapidocr==3.4.2",
     "scenedetect==0.6.7",
     "audio-separator==0.30.2",
     "gradio-toggle>=2.0.2",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "babel>=2.17.0",
    "black>=25.9.0",
    "pip>=25.3",
    "polib>=1.2.0",
    "ruff>=0.14.2",
    "vulture>=2.14",
    "py-spy>=0.4.1",
    "importtime-output-wrapper>=1.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
